add travis.yml; update readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,10 @@
+[![Build Status](https://travis-ci.org/mpadge/truncnorm?branch=master)](https://travis-ci.org/mpadge/truncnorm)
+[![codecov](https://codecov.io/gh/mpadge/truncnorm/branch/master/graph/badge.svg)](https://codecov.io/gh/mpadge/truncnorm)
 
 # truncnorm
 
 There are a few ways to generate truncated normal distribution in `R`, but these
-are s l o w. `truncnorm` is simply faster.
+are **s l o w**. `truncnorm` is simply faster.
 
 
 --------
@@ -14,12 +16,12 @@ are s l o w. `truncnorm` is simply faster.
 devtools::install_github ('mpadge/truncnorm')
 ```
 ```{r load, echo=FALSE, message=FALSE}
-while (length (grep ('trunc-norm', getwd ())) > 0) setwd ("..")
-devtools::document ("trunc-norm")
-devtools::check ("trunc-norm")
+while (length (grep ('truncnorm', getwd ())) > 0) setwd ("..")
+#devtools::document ("truncnorm")
+#devtools::check ("truncnorm")
 #Rcpp::compileAttributes ("truncnorm")
-devtools::load_all ("trunc-norm")
-setwd ("./trunc-norm")
+devtools::load_all ("truncnorm")
+setwd ("./truncnorm")
 ```
 
 -----
