reduce to fastest method; add msm::rtnorm comparison

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,9 @@
 # truncnorm
 
 There are a few ways to generate truncated normal distribution in `R`, but these
-are **s l o w**. `truncnorm` is simply faster.
+are **s l o w**. `truncnorm` is simply faster. Currently generates distributions
+centred around a mean value of 1, truncated to between 0 and 2. Values can be
+readily re-scaled to desired mean values and limits.
 
 
 --------
@@ -28,20 +30,19 @@ setwd ("./truncnorm")
 
 ## Use
 
-There are currently two methods which are compared here
 
 ```{r}
-set.seed (1); z1 <- tnorm (n=100, sd=0.1, method=1)
-set.seed (1); z2 <- tnorm (n=100, sd=0.1, method=2)
-identical (z1, z2)
+set.seed (1); 
+st1 <- system.time (z <- tnorm (n=1e5, sd=1))
 ```
 
-Then compare timings. Things go much slower for `sd>0.26`, hence the value used
-here
+Compare with `msm::rtnorm`:
 ```{r}
-sd <- 0.260
 set.seed (1); 
-system.time (z1 <- tnorm (n=1e4, sd=sd, method=1))
-set.seed (1); 
-system.time (z2 <- tnorm (n=1e4, sd=sd, method=2))
+st2 <- system.time (z <- msm::rtnorm (n=1e5, mean=1, sd=1, lower=0, upper=2))
+st1; st2
+```
+And the speed-up is
+```{r}
+as.numeric (st2 [3] / st1 [3])
 ```
