--- a/README.Rmd
+++ b/README.Rmd
@@ -1,12 +1,22 @@
-[![Build Status](https://travis-ci.org/mpadge/truncnorm?branch=master)](https://travis-ci.org/mpadge/truncnorm)
-[![codecov](https://codecov.io/gh/mpadge/truncnorm/branch/master/graph/badge.svg)](https://codecov.io/gh/mpadge/truncnorm)
+[![Build Status](https://travis-ci.org/mpadge/tnorm?branch=master)](https://travis-ci.org/mpadge/tnorm)
+[![codecov](https://codecov.io/gh/mpadge/tnorm/branch/master/graph/badge.svg)](https://codecov.io/gh/mpadge/tnorm)
 
-# truncnorm
+# tnorm
 
-There are a few ways to generate truncated normal distribution in `R`, but these
-are **s l o w**. `truncnorm` is simply faster. Currently generates distributions
-centred around a mean value of 1, truncated to between 0 and 2. Values can be
-readily re-scaled to desired mean values and limits.
+This package exists merely as a faster replacement for the core functionality of
+other packages. It generates vectors of random values from a truncated normal
+distribution. This functionality already exists in both
+
+1. [msm::rtnorm](https://cran.r-project.org/package=msm), which is entirely
+   R-based, and
+
+2. [truncnorm::rtruncnorm](https://cran.r-project.org/package=truncnorm), which
+   has core code in C.
+
+Even the latter of these is, however, slower than `tnorm` at generating random
+values. `tnorm` currently generates distributions centred around a mean value of
+1, truncated to between 0 and 2. Values can be readily re-scaled to desired mean
+values and limits.
 
 
 --------
@@ -15,16 +25,16 @@ readily re-scaled to desired mean values and limits.
 ## Install
 
 ```{r, eval=FALSE}
-devtools::install_github ('mpadge/truncnorm')
+devtools::install_github ('mpadge/tnorm')
 ```
 ```{r load, echo=FALSE, message=FALSE}
-while (length (grep ('truncnorm', getwd ())) > 0) setwd ("..")
-#devtools::document ("truncnorm")
-#devtools::check ("truncnorm")
-#Rcpp::compileAttributes ("truncnorm")
-devtools::load_all ("truncnorm")
-setwd ("./truncnorm")
-#testthat::test_package ('truncnorm')
+while (length (grep ('tnorm', getwd ())) > 0) setwd ("..")
+#devtools::document ("tnorm")
+#devtools::check ("tnorm")
+#Rcpp::compileAttributes ("tnorm")
+devtools::load_all ("tnorm")
+setwd ("./tnorm")
+#testthat::test_package ('tnorm')
 ```
 
 -----
@@ -33,23 +43,29 @@ setwd ("./truncnorm")
 
 The one and only function
 ```{r}
-z <- tnorm (n=1e5, sd=1)
+z <- tnormn (n=1e5, sd=1)
 ```
 
-## Compare timing with `msm::rtnorm`
+## Compare timing with `msm::rtnorm` and `truncnorm::rtruncnorm`
+
 
 ```{r}
-set.seed (1); 
-st1 <- system.time (z <- tnorm (n=1e5, sd=1))
+fns <- c ('tnormn', 
+          get ('rtnorm', asNamespace ('msm'), mode='function'),
+          get ('rtruncnorm', asNamespace ('truncnorm'), mode='function'))
+n <- 1e5
+mn <- sd <- 1
+args <- list (list (n=n, sd=sd), 
+              list (n=n, mean=mn, sd=sd, lower=0, upper=2),
+              list (n=n, mean=mn, sd=sd, a=0, b=2))
+st <- sapply (1:3, function (i) {
+                  set.seed (1)
+                  system.time (do.call (fns [[i]], args [[i]]))[1]
+              })
+st
 ```
-
-Compare with `msm::rtnorm`:
+And the speed-ups are
 ```{r}
-set.seed (1); 
-st2 <- system.time (z <- msm::rtnorm (n=1e5, mean=1, sd=1, lower=0, upper=2))
-st1; st2
+as.numeric (st [2] / st [1]); as.numeric (st [3] / st [1])
 ```
-And the speed-up is
-```{r}
-as.numeric (st2 [3] / st1 [3])
-```
+And `tnormn` is still several times faster than `rtruncnorm`.
